[package]
name = "spotify_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rspotify = { version = "0.12.0", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls", "cli", "env-file"] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
