[package]
name = "spotify_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
rspotify = { version = "0.13.2", default-features = false, features = [
  "client-reqwest",
  "reqwest-rustls-tls",
  "cli",
  "env-file",
] }
serde = "1.0.201"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.8"
lambda_http = "0.11.1"
image = "0.25.1"
log = { version = "0.4", default-features = false }
reqwest = { version = "0.12.4", features = ["blocking"] }
bytes = "1.6.0"
jpeg-decoder = "0.3.1"
